--- a/content/assets/css/_template.scss
+++ b/content/assets/css/_template.scss
@@ -50,7 +50,7 @@ pre.prettyprint, code.prettyprint {
 
 /* HEADER ================================================================= */
 body>header {
-  margin: 0 0 3em;
+  margin: 0 0 45px;
   padding: 5em 0 2em;
   background: lighten($color1,5) url('../img/use_your_illusion.png') repeat center top fixed;
   border-bottom: 1px solid $color1;
