--- a/layout/base.j2
+++ b/layout/base.j2
@@ -79,9 +79,8 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <script>window.jQuery || document.write("<script src='{{ media_url('js/jquery-1.7.2.min.js') }}'>\x3C/script>")</script>
 
-  <!-- scripts are concatenated, evaluated, and minified using hyde.ext.plugins.combine and lessc -->
+  <!-- scripts are concatenated, evaluated, and minified using hyde.ext.plugins.combine -->
   <script src="{{ media_url('js/main.js') }}"></script>
-  <script src="{{ media_url('js/bootstrap.min.js') }}"></script>
   <!-- end scripts-->
 
   {% if site.config.mode=="production" %}
