--- a/layout/base.j2
+++ b/layout/base.j2
@@ -22,8 +22,8 @@
 
   {% block container %}
   <header>
-    <div class="container hidden-phone">
-      {% block header -%}<h1><a href="{{ content_url('index.html') }}">IHSS-1964 Minds &amp; Machines</a></h1>{%- endblock header %}
+    <div class="container">
+      {% block header -%}<h1><a href="{{ content_url('index.html') }}">Minds &amp; Machines <small class="hidden-phone">IHSS-1964/PHIL-1120</small></a></h1>{%- endblock header %}
       {% block hero -%}{%- endblock hero %}
     </div>
   </header>
