--- a/layout/base.j2
+++ b/layout/base.j2
@@ -34,7 +34,7 @@
 
     <article id="{{ resource.slug }}" role="main" class="row-fluid">
       <nav class="span3">
-        <ul id="navbar" role="navigation" data-spy="affix" data-offset-top="189" >
+        <ul id="navbar" class="unstyled" role="navigation" data-spy="affix" data-offset-top="189">
           {% block nav -%}
           <!--<h1>M&amp;M &raquo; Wumpus World</h1>-->
           {% for grp, res_walker in site.content.walk_section_groups() %}
@@ -53,7 +53,6 @@
           {% endfor %}
           {%- endblock nav %}
         </ul>
-        <!--<small>Using <a href="https://github.com/AsherGlick/Wumpus-Arduino-Redux" rel="nofollow">Wumpus Arduino Redux</a> v0</small>-->
       </nav>
       <section class="span9 well">
         <div class="row-fluid">
