--- a/layout/base.j2
+++ b/layout/base.j2
@@ -32,7 +32,7 @@
 
   <div class="container">
 
-    <article id="{{ resource.slug }}" role="main" class="row-fluid">
+    <article role="main" class="row-fluid">
       <nav class="span3">
         <ul id="navbar" class="unstyled clearfix" role="navigation" data-spy="affix" data-offset-top="189">
           {% block nav -%}
