--- a/content/assets/css/style.scss
+++ b/content/assets/css/style.scss
@@ -35,8 +35,6 @@ $font1      : 'Museo Sans',Arial,sans-serif;
 
 
 /* === PRIMARY STYLES ======================================================= */
-@import 'fonts';
-@import "prettify_sunburst.css";
-@import "components";
+@import "fonts";
 @import "template";
 @import "pages";
