--- a/content/assets/css/_template.scss
+++ b/content/assets/css/_template.scss
@@ -56,6 +56,7 @@ body>header {
     }
     p {
       font-size: 1.2em;
+      color: darken($color0,25);
     }
     i {
       padding-right: 10px;
@@ -189,6 +190,7 @@ footer.row {
     padding-bottom: 40px;
     background: transparent url('../img/rcos_rensselaer-crop.png') no-repeat 15px bottom;
     font-size: 1em;
+    line-height: 1.1em;
   }
 }
 
@@ -260,8 +262,10 @@ footer.row {
     }
   }
   footer.row {
-    font-size: .8em;
+    padding: 0 15px 2em;
+    font-size: 0.8em;
     small {
+      padding-bottom: 0;
       background-image: none;
     }
   }
